[project]
name = "ncclab-t"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "av>=16.0.1",
    "decord>=0.6.0",
    "deepspeed==0.15.4",
    "einops>=0.8.1",
    "open-clip-torch>=3.2.0",
    "openai>=2.14.0",
    "opencv-python-headless>=4.12.0.88",
    "pandas>=2.3.3",
    "peft==0.13.2",
    "pillow>=12.0.0",
    "sentence-transformers>=5.2.0",
    "torch>=2.9.1",
    "transformers==4.45.0",
]
