[project]
name = "ncclab-t"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "addict>=2.4.0",
    "av>=16.0.1",
    "bilibili-api-python>=17.4.1",
    "chardet>=5.2.0",
    "datasets<4.0.0",
    "decord>=0.6.0",
    "deepspeed==0.15.4",
    "defusedxml>=0.7.1",
    "einops>=0.8.1",
    "h5py>=3.15.1",
    "httpx[socks]>=0.28.1",
    "huggingface-hub>=0.36.0",
    "matplotlib>=3.10.8",
    "mffpy>=0.10.0",
    "mne>=1.11.0",
    "modelscope>=1.33.0",
    "open-clip-torch>=3.2.0",
    "openai>=2.14.0",
    "opencv-python-headless>=4.12.0.88",
    "pandas>=2.3.3",
    "peft==0.13.2",
    "pillow>=12.0.0",
    "sentence-transformers>=5.2.0",
    "socksio>=1.0.0",
    "torch>=2.9.1",
    "transformers==4.45.0",
]
